src/test/deca/context/valid/objet/nested_method_param_01.deca
// Description:
//   nested method type
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int x;
    A setX(A a) {
        return a;
    }
}
