src/test/deca/context/invalid/objet/wrong_return_type.deca
// Description:
//     Mauvais return type.
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int getX(A a){
        return a;
    }
}

